{
    "name": "InputMap",
    "maps": [
        {
            "name": "Gameplay",
            "id": "7e72e028-3f74-4d67-9b75-12309f89ce56",
            "actions": [
                {
                    "name": "BallForce",
                    "type": "Button",
                    "id": "84425b17-ec6d-43ce-baad-5cacf685707f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftLever",
                    "type": "Button",
                    "id": "971a19fd-9e80-497f-bac2-2eb828fc6a5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RigthLever",
                    "type": "Button",
                    "id": "eac16f2a-ea96-4d17-a442-71f13345c93c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a3ee11d5-dc85-4390-a187-4a8e10e05743",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallForce",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60096867-f8c3-4e88-a990-65d284809f32",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftLever",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b014fda0-bc2d-4c9f-a188-248e6265ad06",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthLever",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}